<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.UserInputActivity"
    android:background="@color/blue">

    <RelativeLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple"
        android:paddingVertical="20dp"
        android:paddingHorizontal="20dp"
        >

        <TextView
            android:id="@+id/topic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/inputTopic"
            android:textSize="22sp"
            android:fontFamily="@font/roboto"
            android:layout_centerVertical="true"
            />

        <ImageButton
            android:id="@+id/emergencyBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_call"
            android:layout_centerVertical="true"
            android:layout_centerInParent="true"
            android:layout_alignParentEnd="true"
            android:background="@color/purple"
            android:layout_marginStart="120dp"/>

    </RelativeLayout>


    <EditText
        android:id="@+id/info_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/topBar"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        android:hint="@string/hintInfo"
        android:autofillHints="@string/hintInfo"
        android:drawablePadding="15dp"
        android:paddingHorizontal="15dp"
        android:paddingVertical="15dp"
        android:drawableStart="@drawable/ic_info"
        android:background="@drawable/custom_input"
        android:textColor="@color/blueText"
        android:fontFamily="@font/roboto"
        android:inputType="text"/>

    <Button
        android:id="@+id/camera_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/info_id"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/custom_button_2"
        android:layout_marginTop="20dp"
        android:text="@string/cameraBtn"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:paddingVertical="15dp"
        />

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content">-->
<!--        -->
<!--    </LinearLayout>-->

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        tools:context="com.example.mapwithmarker.MapsMarkerActivity"
        android:layout_below="@id/camera_btn"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        />

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/map"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/custom_button"
        android:layout_marginTop="40dp"
        android:text="@string/submitBtn"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:paddingVertical="15dp"
        />

    <include
        android:id="@+id/tablayout"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="10dp"
        layout="@layout/tablayout"
        android:layout_centerHorizontal="true"
        />

</RelativeLayout>