<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ViewMapsActivity">

    <!--  Layout App Bar  -->
    <RelativeLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:background="@color/purple"
        android:paddingHorizontal="20dp">

        <TextView
            android:id="@+id/topic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/showSearch"
            android:fontFamily="@font/roboto"
            android:text="@string/titikRawanTopic"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <ImageButton
            android:id="@+id/showSearch"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@color/purple"
            android:contentDescription="@string/cari_titik_rawan"
            android:src="@drawable/ic_search_gray"
            android:tag="show" />

    </RelativeLayout>

    <!--  Maps Fragment  -->
    <fragment
        android:id="@+id/mapview"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/topBar"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        tools:context=".ui.ViewMapsActivity" />

    <!--  Layout Pencarian  -->
    <LinearLayout
        android:id="@+id/layoutSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/mapview"
        android:layout_margin="18dp"
        android:background="@drawable/custom_input"
        android:elevation="12dp"
        android:orientation="horizontal"
        android:padding="6dp"
        android:visibility="gone">

        <EditText
            android:id="@+id/inputSearchPoint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textAutoComplete" />

        <ImageButton
            android:id="@+id/buttonSearchPoint"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:background="@drawable/custom_button_2"
            android:src="@drawable/ic_search_gray" />

    </LinearLayout>

    <!--  Layout Tombol Navigasi Bawah  -->
    <LinearLayout
        android:id="@+id/buttonNavigasi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:background="@drawable/custom_bg_white_radius"
        android:elevation="18dp"
        android:gravity="center"
        android:paddingHorizontal="14dp"
        android:paddingVertical="8dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_navigation" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_bold"
            android:text="@string/text_navigation"
            android:textColor="@color/blueText"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/layoutNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@color/purple"
        android:elevation="10dp"
        android:orientation="vertical"
        android:padding="12dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/navigation_close_btn"
                android:text="@string/text_navigation"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/navigation_close_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_baseline_close_24" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:weightSum="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:src="@drawable/ic_trip_origin_white_24" />

            <Button
                android:id="@+id/inputFirstLoc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_input_rouded"
                android:fontFamily="@font/lato"
                android:padding="12dp"
                android:text="@string/text_input_first_location"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textStyle="normal" />

        </LinearLayout>

        <RadioGroup
            android:id="@+id/radiogroup_firstLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <RadioButton
                android:id="@+id/buttonFirst_myloc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:background="@drawable/custom_bg_radiobutton"
                android:button="@null"
                android:drawableStart="@drawable/ic_outline_my_location_gray_24"
                android:drawablePadding="8dp"
                android:padding="10dp"
                android:text="Lokasi Saya"
                android:textColor="@color/gray" />

            <RadioButton
                android:id="@+id/buttonFirst_pickOnMap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_bg_radiobutton"
                android:button="@null"
                android:drawableStart="@drawable/ic_outline_pin_drop_gray_24"
                android:drawablePadding="8dp"
                android:padding="10dp"
                android:text="Pilih di Peta"
                android:textColor="@color/gray" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:weightSum="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:src="@drawable/ic_place_white_24" />

            <Button
                android:id="@+id/inputLastLoc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_input_rouded"
                android:fontFamily="@font/lato"
                android:padding="12dp"
                android:text="@string/text_input_last_location"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textStyle="normal" />

        </LinearLayout>

        <RadioGroup
            android:id="@+id/radiogroup_lastLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <RadioButton
                android:id="@+id/buttonLast_myloc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:background="@drawable/custom_bg_radiobutton"
                android:button="@null"
                android:drawableStart="@drawable/ic_outline_my_location_gray_24"
                android:drawablePadding="8dp"
                android:padding="10dp"
                android:text="Lokasi Saya"
                android:textColor="@color/gray" />

            <RadioButton
                android:id="@+id/buttonLast_pickOnMap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_bg_radiobutton"
                android:button="@null"
                android:drawableStart="@drawable/ic_outline_pin_drop_gray_24"
                android:drawablePadding="8dp"
                android:padding="10dp"
                android:text="Pilih di Peta"
                android:textColor="@color/gray" />

        </RadioGroup>

    </LinearLayout>

</RelativeLayout>